refactor: remove api key and replace with redacted text

--- a/src/alt.ipynb
+++ b/src/alt.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "together.api_key = \"858b18c2a7e6521c3839abc864092df6891c3f16380b55920d32cf75b334063c\""
+    "together.api_key = \"<YOUR TOGETHER API KEY HERE>\""
    ]
   },
   {
