refactor: add create_query function

--- a/src/alt.ipynb
+++ b/src/alt.ipynb
@@ -166,6 +166,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_query(question : str, collection : chromadb.Collection) -> dict:\n",
+    "    results_dict = collection.query(\n",
+    "        query_texts = question,\n",
+    "        n_results = 3\n",
+    "    )\n",
+    "    print(results_dict)\n",
+    "\n",
+    "    return results_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -173,19 +189,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'ids': [['id16', 'id13', 'id21']], 'distances': [[0.6138546466827393, 0.8638967871665955, 0.8762274384498596]], 'metadatas': [[None, None, None]], 'embeddings': None, 'documents': [['A \"distro \" is made by a company or organization and\\npackages the Linux core with additional programs and\\ntooling.\\nFor example you have Debian, Red Hat, and Ubuntu,\\nprobably the most popular .', 'what goes into Linux, or the project priorities.6Linux can also be used as your day to day computer . I\\nuse macOS because I really enjoy the applications,', \"GNU/Linux syste m uses, because GNU/Linux is a free\\nalternative to UNIX.\\nUNIX  is an umbrella term that groups many\\noperating systems used in big corporations and\\ninstitutions, starting from the 70's\"]], 'uris': None, 'data': None}\n"
+      "{'ids': [['id16', 'id13', 'id21']], 'distances': [[0.630453884601593, 0.8380312919616699, 0.8631106019020081]], 'metadatas': [[None, None, None]], 'embeddings': None, 'documents': [['A \"distro \" is made by a company or organization and\\npackages the Linux core with additional programs and\\ntooling.\\nFor example you have Debian, Red Hat, and Ubuntu,\\nprobably the most popular .', 'what goes into Linux, or the project priorities.6Linux can also be used as your day to day computer . I\\nuse macOS because I really enjoy the applications,', \"GNU/Linux syste m uses, because GNU/Linux is a free\\nalternative to UNIX.\\nUNIX  is an umbrella term that groups many\\noperating systems used in big corporations and\\ninstitutions, starting from the 70's\"]], 'uris': None, 'data': None}\n"
      ]
     }
    ],
    "source": [
-    "question = [\"What are the different Linux distros?\"]\n",
-    "\n",
-    "results = collection.query(\n",
-    "    query_texts = question,\n",
-    "    n_results = 3\n",
-    ")\n",
-    "\n",
-    "print(results)"
+    "user_input = \"What are some of the different Linux distros\"\n",
+    "results = create_query(user_input, collection)"
    ]
   },
   {
@@ -198,7 +208,7 @@
      "output_type": "stream",
      "text": [
       "ids [['id16', 'id13', 'id21']]\n",
-      "distances [[0.6138546466827393, 0.8638967871665955, 0.8762274384498596]]\n",
+      "distances [[0.630453884601593, 0.8380312919616699, 0.8631106019020081]]\n",
       "metadatas [[None, None, None]]\n",
       "embeddings None\n",
       "documents [['A \"distro \" is made by a company or organization and\\npackages the Linux core with additional programs and\\ntooling.\\nFor example you have Debian, Red Hat, and Ubuntu,\\nprobably the most popular .', 'what goes into Linux, or the project priorities.6Linux can also be used as your day to day computer . I\\nuse macOS because I really enjoy the applications,', \"GNU/Linux syste m uses, because GNU/Linux is a free\\nalternative to UNIX.\\nUNIX  is an umbrella term that groups many\\noperating systems used in big corporations and\\ninstitutions, starting from the 70's\"]]\n",
@@ -254,7 +264,7 @@
     "info_page = results['documents'][0]\n",
     "specific_prompt = [\n",
     "    f\"Information page is {info_page}.\"\n",
-    "    f\"Question is {question}\"\n",
+    "    f\"Question is {user_input}\"\n",
     "]"
    ]
   },
@@ -299,15 +309,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Based on the provided information pages, here is the answer to the question:\n",
-      "\n",
-      "There are many different Linux distros available, some of the most popular include:\n",
+      "  Based on the information provided in the information pages, here are some examples of different Linux distros:\n",
       "\n",
       "1. Debian\n",
       "2. Red Hat\n",
       "3. Ubuntu\n",
       "\n",
-      "These distros package the Linux core with additional programs and tooling, making them suitable for use as a day-to-day computer. They are also known as GNU/Linux systems, as they use the GNU operating system and are a free alternative to UNIX. Other popular distros include Fedora, CentOS, and SUSE.\n"
+      "These are some of the most popular Linux distros.\n"
      ]
     }
    ],
