feat: add .env file to save api keys locally

--- a/src/alt.ipynb
+++ b/src/alt.ipynb
@@ -8,8 +8,10 @@
    "source": [
     "from PyPDF2 import PdfReader\n",
     "from langchain_text_splitters import CharacterTextSplitter\n",
+    "from dotenv import load_dotenv\n",
     "import chromadb\n",
-    "import together"
+    "import together\n",
+    "import os"
    ]
   },
   {
@@ -18,7 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "together.api_key = \"<YOUR TOGETHER API KEY HERE>\""
+    "# Credentials\n",
+    "load_dotenv(\"../.env\")\n",
+    "together.api_key = os.environ[\"TOGETHER_API_KEY\"]"
    ]
   },
   {
@@ -309,13 +313,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Based on the information provided in the information pages, here are some examples of different Linux distros:\n",
+      "  Based on the provided information pages, here are some examples of different Linux distros:\n",
       "\n",
       "1. Debian\n",
       "2. Red Hat\n",
       "3. Ubuntu\n",
       "\n",
-      "These are some of the most popular Linux distros.\n"
+      "These are some of the most popular Linux distros, according to the provided information pages.\n"
      ]
     }
    ],
